@@ -61,8 +61,21 @@
 							<div id="body-${bodyID }" ${status.first ? '' : 'style="display:none"'}>
 								<small class="form-text text-muted">Clicca sul problema per vedere la traccia</small>
 								<h3>Problema <span class="label label-primary"><a target="_blank" href="${pageContext.servletContext.contextPath }/files/${problem.id_problem}">${problem.name}</a></span></h3><br>
+								<c:if test="${problem.show_testcase}">
+									<c:choose>
+										<c:when test="${(problem.type == 'zip') || (problem.type == 'rar') || (problem.type == '7z')}">
+											<h4>Test-Case</h4>
+											<a href="${pageContext.servletContext.contextPath }/testCase/input/${problem.id_problem}" class="btn btn-info">File di input</a><br><br>
+										</c:when>
+										<c:when test="${(problem.type == 'txt') || (problem.type == 'dlv')}">
+											<h4>Test-Case</h4>
+											<a href="${pageContext.servletContext.contextPath }/testCase/input/${problem.id_problem}" class="btn btn-info">File di input</a>
+											<a href="${pageContext.servletContext.contextPath }/testCase/output/${problem.id_problem}" class="btn btn-info">File di output</a><br><br>
+										</c:when>
+									</c:choose>
+								</c:if>
 								<div class="bubble">
-									<h4><span class="label label-info">Descrizione</span></h4>
+									<h4><span class="label label-warning">Descrizione</span></h4>
 									<div class="well well-sm">${problem.description}</div>
 									<br>
 								</div><br>
